// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be actionable 1`] = `
<div
  className="radio-card radio-card-actionable"
  onClick={[MockFunction]}
  role="radio"
  tabIndex={0}
>
  <h2
    className="radio-card-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      <i
        className="icon-radio spacer-right"
      />
      Radio Card
    </span>
  </h2>
  <div
    className="radio-card-body"
  >
    <div>
      content
    </div>
  </div>
</div>
`;

exports[`should be actionable 2`] = `
<div
  aria-checked={true}
  className="radio-card radio-card-actionable selected"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "currentTarget": Object {
              "blur": [Function],
            },
            "preventDefault": [Function],
            "stopPropagation": [Function],
            "target": Object {
              "blur": [Function],
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  role="radio"
  tabIndex={0}
>
  <h2
    className="radio-card-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      <i
        className="icon-radio spacer-right is-checked"
      />
      Radio Card
    </span>
    info
  </h2>
  <div
    className="radio-card-body"
  >
    <div>
      content
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="radio-card"
  role="radio"
  tabIndex={0}
>
  <h2
    className="radio-card-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      Radio Card
    </span>
    info
  </h2>
  <div
    className="radio-card-body"
  >
    <div>
      content
    </div>
  </div>
  <div
    className="radio-card-recommended"
  >
    <RecommendedIcon
      className="spacer-right"
    />
    <FormattedMessage
      defaultMessage="Recommended for you"
      id="Recommended for you"
      values={
        Object {
          "recommended": <strong>
            recommended
          </strong>,
        }
      }
    />
  </div>
</div>
`;
